Merged in VA-258 (pull request #158)
[VA-258]: Settings - Asset Types

* resolved comments

* resolved comments

* Merge remote-tracking branch 'origin/VA-258' into VA-258

* modified json files according to date time

* [VA-308] predefined asset types list with icons

* Merge branch 'develop' of https://bitbucket.org/windmillgmbh/audra-platform into VA-258

 Conflicts:
	backend/src/test/resources/graphql/response/createAsset.json
	backend/src/test/resources/graphql/response/getAsset.json
	backend/src/test/resources/gr…
* fix sort category by created at

* Modified graphql files

* fix asset type category

* Merge remote-tracking branch 'origin/VA-258' into VA-258


Approved-by: Roman Shtepa
Approved-by: Tetiana Hladka
Approved-by: Oleksii Hobzhelian