@@ -1,97 +1,108 @@
 package digital.windmill.audra.facade;
 
 
+import digital.windmill.audra.dao.entity.AssetTypeCategoryEntity;
 import digital.windmill.audra.dao.entity.AssetTypeEntity;
-import digital.windmill.audra.graphql.facade.impl.AssetTypeFacadeImpl;
+import digital.windmill.audra.graphql.facade.impl.AssetTypeFacade;
 import digital.windmill.audra.graphql.mapper.AssetTypeMapper;
-import digital.windmill.audra.graphql.type.AssetType;
-import digital.windmill.audra.service.impl.AssetTypeServiceImpl;
-import org.junit.jupiter.api.Assertions;
+import digital.windmill.audra.graphql.type.assetType.AssetType;
+import digital.windmill.audra.graphql.type.assetType.AssetTypesInput;
+import digital.windmill.audra.graphql.type.assetType.CreateAssetTypeInput;
+import digital.windmill.audra.graphql.type.assetType.UpdateAssetTypeInput;
+import digital.windmill.audra.graphql.type.input.NodeInput;
+import digital.windmill.audra.service.impl.AssetTypeCategoryService;
+import digital.windmill.audra.service.impl.AssetTypeService;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class AssetTypeFacadeTest {
 
+    private static final UUID ASSETTYPE_UUID = UUID.randomUUID();
+    private static final UUID CATEGORY_UUID = UUID.randomUUID();
+
     @Mock
-    AssetTypeServiceImpl assetTypeServiceImpl;
+    private AssetTypeService assetTypeService;
+
+    @Mock
+    private AssetTypeCategoryService assetTypeCategoryService;
 
     @Mock
     private AssetTypeMapper assetTypeMapper;
 
     @InjectMocks
-    AssetTypeFacadeImpl assetTypeFacadeImpl;
-
-    private static final Long ID = 1L;
-    private static final UUID TEST_UUID = UUID.fromString("5478b586-e607-4448-ac05-3e5f2adbbc1b");
-    private static final UUID SECOND_UUID = UUID.fromString("b7c34a7d-eeb8-4491-b2c8-0e79d1367b6b");
-    private static final String TITLE = "Laptops";
-    private static final String ICON = "https://google.com/laptops";
+    private AssetTypeFacade assetTypeFacade;
 
     @Test
-    void shouldFindAssetTypeByUuid() {
-        when(assetTypeServiceImpl.findAssetByUuid(any(UUID.class))).thenReturn(createAssetTypeEntity());
-        when(assetTypeMapper.mapAssetTypeEntityToAssetType(any(AssetTypeEntity.class))).thenReturn(createAssetType());
-        var result = assetTypeFacadeImpl.findAssetTypeByUuid(TEST_UUID);
-        assertNotNull(result);
-        Assertions.assertEquals(TEST_UUID, result.getId());
-        Assertions.assertEquals(TITLE, result.getTitle());
-        Assertions.assertEquals(ICON, result.getIcon());
+    void shouldFindAssetTypeByUuid(@Mock AssetTypeEntity assetTypeEntity,
+                                   @Mock AssetType assetType) {
+
+        when(assetTypeService.findAssetByUuid(ASSETTYPE_UUID)).thenReturn(assetTypeEntity);
+        when(assetTypeMapper.map(assetTypeEntity)).thenReturn(assetType);
+
+        var actualResult = assetTypeFacade.findAssetTypeByUuid(ASSETTYPE_UUID);
+        assertEquals(assetType, actualResult);
     }
 
     @Test
-    void shouldGetAssetsType() {
-        var pagedResponse = new PageImpl<>(createAssetsTypeEntity());
-        when(assetTypeServiceImpl.getAssetsType()).thenReturn(pagedResponse);
-        when(assetTypeMapper.mapAssetTypeEntityToAssetType(any(AssetTypeEntity.class))).thenReturn(createAssetType());
-        var result = assetTypeFacadeImpl.getAssetsType();
-        assertNotNull(result);
-        assertEquals(TEST_UUID, result.getContent().get(0).getId());
-        assertEquals(ICON, result.getContent().get(0).getIcon());
-        assertEquals(TITLE, result.getContent().get(0).getTitle());
+    void shouldGetAssetsType(@Mock AssetTypesInput input,
+                             @Mock AssetTypeEntity assetTypeEntity,
+                             @Mock AssetType assetType) {
+
+        when(assetTypeService.getAssetTypes(input)).thenReturn(createOneItemPage(assetTypeEntity));
+        when(assetTypeMapper.map(assetTypeEntity)).thenReturn(assetType);
+
+        var actualResult = assetTypeFacade.getAssetTypes(input);
+        assertEquals(createOneItemPage(assetType), actualResult);
     }
 
-    private List<AssetTypeEntity> createAssetsTypeEntity() {
-        return Arrays.asList(AssetTypeEntity.builder()
-                        .uuid(TEST_UUID)
-                        .title(TITLE)
-                        .icon(ICON)
-                        .build(),
-                AssetTypeEntity.builder()
-                        .uuid(SECOND_UUID)
-                        .title(TITLE)
-                        .icon(ICON)
-                        .build()
-        );
+    private <T> Page<T> createOneItemPage(T item) {
+        return new PageImpl<>(List.of(item));
     }
 
-    private AssetTypeEntity createAssetTypeEntity() {
-        return AssetTypeEntity.builder()
-                .uuid(TEST_UUID)
-                .icon(ICON)
-                .id(ID)
-                .title(TITLE)
-                .build();
+    @Test
+    void shouldCreateAssetType(@Mock CreateAssetTypeInput input,
+                               @Mock AssetTypeCategoryEntity assetTypeCategoryEntity,
+                               @Mock AssetTypeEntity assetTypeEntity,
+                               @Mock AssetType assetType) {
+
+        when(input.getCategory()).thenReturn(NodeInput.of(String.valueOf(CATEGORY_UUID)));
+        when(assetTypeCategoryService.findAssetTypeCategoryByUuid(input.getCategory().getId())).thenReturn(assetTypeCategoryEntity);
+        when(assetTypeMapper.map(input, assetTypeCategoryEntity)).thenReturn(assetTypeEntity);
+        when(assetTypeService.save(assetTypeEntity)).thenReturn(assetTypeEntity);
+        when(assetTypeMapper.map(assetTypeEntity)).thenReturn(assetType);
+
+        var actualResult = assetTypeFacade.createAssetType(input);
+        assertEquals(assetType, actualResult);
     }
 
-    private AssetType createAssetType() {
-        return AssetType.builder()
-                .id(TEST_UUID)
-                .title(TITLE)
-                .icon(ICON)
-                .build();
+    @Test
+    void shouldUpdateAssetType(@Mock UpdateAssetTypeInput input,
+                               @Mock AssetTypeEntity assetTypeEntity,
+                               @Mock AssetTypeCategoryEntity assetTypeCategoryEntity,
+                               @Mock AssetType assetType) {
+
+        when(input.getCategory()).thenReturn(NodeInput.of(String.valueOf(CATEGORY_UUID)));
+        when(assetTypeCategoryService.findAssetTypeCategoryByUuid(input.getCategory().getId())).thenReturn(assetTypeCategoryEntity);
+        when(assetTypeService.findAssetByUuid(input.getId())).thenReturn(assetTypeEntity);
+        when(assetTypeMapper.map(input, assetTypeEntity, assetTypeCategoryEntity)).thenReturn(assetTypeEntity);
+        when(assetTypeService.save(assetTypeEntity)).thenReturn(assetTypeEntity);
+        when(assetTypeMapper.map(assetTypeEntity)).thenReturn(assetType);
+
+        var actualResult = assetTypeFacade.updateAssetType(input);
+        assertEquals(assetType, actualResult);
     }
+
+
 }
